--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,22 @@ html, body
 	padding:0;
 	width:100%;
 	height:100%;
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-family: "Helvetica"
+}
+
+.chat-server
+{
+	color:gold;
+}
+
+.chat-script
+{
+	color:#318739;
+}
+
+.chat-welcome
+{
+	color:blue;
 }
 
 #content
@@ -184,6 +199,7 @@ a
 	border-top-left-radius:0px;
 	padding:8px;
 	overflow-y:auto;
+	overflow-x:hidden;
 	background:white;
 	font-size:16px;
 }
